--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/parser": "^5.0.0",
     "axios": "^0.27.2",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "notyf": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
     "react-scripts": "5.0.1",
     "sass": "^1.54.5",
-    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +51,14 @@
     ]
   },
   "devDependencies": {
-    "concurrently": "^7.3.0"
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "concurrently": "^7.3.0",
+    "eslint": "^8.23.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.5",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-react": "^7.31.7",
+    "typescript": "^4.8.3"
   }
 }
