--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,8 @@
         "project": "./tsconfig.json"
     },
     "plugins": [
-        "react"
+        "react",
+        "import"
     ],
     "rules": {}
 }
